Fixed Nav so I could get accordion to work, and also adjusted featured products spacing

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -28,9 +28,14 @@ $default-color: #FFF;
 // General Styles
 body {
     min-height: 100vh;
+    max-width: 1920px;
     font-family: $font-stack;
     overflow-y: auto;
     overflow-x: hidden;
+}
+
+.flex {
+    display: flex;
 }
 
 h1,
